--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Matthieu Vilain</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,26 +18,25 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
+					<h1 id="logo"><a href="#">Matthieu Vilain</a></h1>
+					<p>Etudiant en Intelligence Artificielle<br />
+					Université de Cergy-Pontoise</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+						<li><a href="#one" class="active">About me</a></li>
+						<li><a href="#five">Expérinces</a></li>
+						<li><a href="#two">Compétences</a></li>
+						<li><a href="#three">Mes projets</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:mattvilain@gmail.com" class="icon fa-envelope"><span class="label">m</span></a></li>
+						<li><a href="https://github.com/MattVil" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://linkedin.com/in/matthieu-vilain-a81a4b139" class="icon fa-linkedin"><span class="label">linkedin</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -480,7 +479,7 @@
 
 								</div>
 							</section>
-						
+
 					</div>
 
 				<!-- Footer -->
