--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Matthieu Vilain</a></h1>
-					<p>Etudiant en Intelligence Artificielle<br />
+					<p>Étudiant en Intelligence Artificielle<br />
 					Université de Cergy-Pontoise</p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About me</a></li>
-						<li><a href="#five">Expérinces</a></li>
+						<li><a href="#experience">Expérinces</a></li>
 						<li><a href="#two">Compétences</a></li>
 						<li><a href="#three">Mes projets</a></li>
 						<li><a href="#four">Contact</a></li>
@@ -51,18 +51,27 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>About me</h2>
+										<p>Étudiant en Intelligence Artificielle à l'Université de Cergy-Pontoise</p>
 									</header>
 									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+								</div>
+							</section>
+
+						<!-- experience -->
+							<section id="experience">
+								<div class="container">
+									<h3>Mon expérience</h3>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Aucibus sed lobortis aliquam lorem blandit.Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
+									<h3>Mes compétences</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
 										<li class="fa-code">Write all the code</li>
