--- a/index.html
+++ b/index.html
@@ -50,12 +50,15 @@
 
 						<!-- One -->
 							<section id="one">
+								<span class="image fit"><img src="images/page-en-construction.png" alt="" /></span>
 								<div class="container">
 									<header class="major">
 										<h2>About me</h2>
 										<p>Étudiant en Intelligence Artificielle à l'Université de Cergy-Pontoise</p>
 									</header>
+									<!--
 									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									-->
 								</div>
 							</section>
 
@@ -63,9 +66,11 @@
 							<section id="experience">
 								<div class="container">
 									<h3>Mon expérience</h3>
+									<!--
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<p>Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<p>Aucibus sed lobortis aliquam lorem blandit.Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+								-->
 								</div>
 							</section>
 
@@ -73,6 +78,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Mes compétences</h3>
+									<!--
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
 										<li class="fa-code">Write all the code</li>
@@ -82,6 +88,7 @@
 										<li class="fa-bolt">Lightning bolt</li>
 										<li class="fa-users">Shadow clone technique</li>
 									</ul>
+								-->
 								</div>
 							</section>
 
@@ -89,6 +96,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
+									<!--
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
@@ -113,6 +121,7 @@
 											</div>
 										</article>
 									</div>
+								-->
 								</div>
 							</section>
 
@@ -120,6 +129,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
+									<!--
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<form method="post" action="#">
 										<div class="row uniform">
@@ -141,12 +151,13 @@
 											</div>
 										</div>
 									</form>
+								-->
 								</div>
 							</section>
 
 						<!-- Five -->
 
-							<section id="five">
+							<!--<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
 
@@ -490,7 +501,7 @@
 								</div>
 							</section>
 
-					</div>
+					</div> -->
 
 				<!-- Footer -->
 					<section id="footer">
