--- a/index.html
+++ b/index.html
@@ -21,18 +21,8 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Matthieu Vilain</a></h1>
-					<p>Étudiant en Intelligence Artificielle<br />
-					Université de Cergy-Pontoise</p>
+					<p>Étudiant en Intelligence Artificielle</br>Université de Cergy-Pontoise</p>
 				</header>
-				<nav id="nav">
-					<ul>
-						<li><a href="#one" class="active">About me</a></li>
-						<li><a href="#experience">Expérinces</a></li>
-						<li><a href="#two">Compétences</a></li>
-						<li><a href="#three">Mes projets</a></li>
-						<li><a href="#four">Contact</a></li>
-					</ul>
-				</nav>
 				<footer>
 					<ul class="icons">
 						<li><a href="mailto:mattvilain@gmail.com" class="icon fa-envelope"><span class="label">m</span></a></li>
@@ -40,6 +30,16 @@
 						<li><a href="https://linkedin.com/in/matthieu-vilain-a81a4b139" class="icon fa-linkedin"><span class="label">linkedin</span></a></li>
 					</ul>
 				</footer>
+				<nav id="nav">
+					<ul>
+						<li><a href="#about" class="active">About me</a></li>
+						<li><a href="#experience">Expérinces</a></li>
+						<li><a href="#competences">Compétences</a></li>
+						<li><a href="#projet">Mes projets</a></li>
+						<li><a href="#lecture">Mes lectures</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
 			</section>
 
 		<!-- Wrapper -->
@@ -48,13 +48,15 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- One -->
-							<section id="one">
+						<!-- about -->
+							<section id="about">
 								<span class="image fit"><img src="images/page-en-construction.png" alt="" /></span>
 								<div class="container">
 									<header class="major">
 										<h2>About me</h2>
 										<p>Étudiant en Intelligence Artificielle à l'Université de Cergy-Pontoise</p>
+										<h3 style="text-align:center">Mon CV</h3>
+										<p style="text-align:center"><a href="#" class="button special icon fa-download">Français</a> <a href="#" class="button special icon fa-download">English</a></p>
 									</header>
 									<!--
 									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
@@ -66,37 +68,38 @@
 							<section id="experience">
 								<div class="container">
 									<h3>Mon expérience</h3>
-									<!--
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<p>Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<p>Aucibus sed lobortis aliquam lorem blandit.Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
-								-->
 								</div>
 							</section>
 
-						<!-- Two -->
-							<section id="two">
+						<!-- competences -->
+							<section id="competences">
 								<div class="container">
 									<h3>Mes compétences</h3>
-									<!--
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Je tire mes compétences des cours que j'ai reçu à l'UCP, des cours en ligne mais également de mes projets en groupe et personnel (projet informatique ou non)</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
-										<li class="fa-cubes">Stack small boxes</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-coffee">Drink much coffee</li>
-										<li class="fa-bolt">Lightning bolt</li>
-										<li class="fa-users">Shadow clone technique</li>
+										<li class="fa-code">Dev : C - Java - Python - Arduino</br>Web : HTML - CSS - PHP</li>
+										<li class="fa-cubes">Tools & library :</br>- OpenCV</br>- Git</li>
+										<li class="fa-heart">Machine Learning :</br>- Tensoflow/Theano</br>- Perceptron/Deeplearning</br>- Reinforcment learning</li>
+										<li class="fa-database">Base de données SQL</br>- Client Oracle</br>- Client/Serveur Postgre</li>
+										<li class="fa-bug">Robotique</li>
+										<li class="fa-code-fork">Réseau</li>
+										<li class="fa-book">Bibliographie <3</br>(voir <a href=#>Mes lectures</a>)</li>
+										<li class="fa-laptop">Environement Linux</br>Programmation système</li>
+										<li class="fa-bolt">Travailleur</br>Toujours motivé !</li>
+										<li class="fa-users">Travail en équipe</br>Compétences managment</li>
+										<li class="fa-comments">Langues :</br>- Anglais courant</br>- Allemand niveau B2</li>
+										<li class="fa-coffee">Sociable</br>Bonne humeur</li>
 									</ul>
-								-->
 								</div>
 							</section>
 
-						<!-- Three -->
-							<section id="three">
+						<!-- projet -->
+							<section id="projet">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<!--
+									<h3>Mes projets</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
@@ -121,15 +124,23 @@
 											</div>
 										</article>
 									</div>
-								-->
 								</div>
 							</section>
 
-						<!-- Four -->
-							<section id="four">
+						<!-- lecture -->
+							<section id="lecture">
+								<div class="container">
+									<h3>Mes lectures</h3>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Aucibus sed lobortis aliquam lorem blandit.Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+								</div>
+							</section>
+
+						<!-- contact -->
+							<section id="contact">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<!--
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<form method="post" action="#">
 										<div class="row uniform">
@@ -151,13 +162,12 @@
 											</div>
 										</div>
 									</form>
-								-->
 								</div>
 							</section>
 
 						<!-- Five -->
 
-							<!--<section id="five">
+							<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
 
@@ -501,7 +511,7 @@
 								</div>
 							</section>
 
-					</div> -->
+					</div>
 
 				<!-- Footer -->
 					<section id="footer">
