--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										<h2>About me</h2>
 										<p>Étudiant en Intelligence Artificielle à l'Université de Cergy-Pontoise</p>
 										<h3 style="text-align:center">Mon CV</h3>
-										<p style="text-align:center"><a href="#" class="button special icon fa-download">Français</a> <a href="#" class="button special icon fa-download">English</a></p>
+										<p style="text-align:center"><a href="./assets/CV\ 6\ anglais.pdf" class="button special icon fa-download">Français</a> <a href="#" class="button special icon fa-download">English</a></p>
 									</header>
 									<!--
 									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
