remove element setup

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<section id="projet">
 								<div class="container">
 									<h3>Mes projets</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>688*397Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/urban.png" alt="" /></a>
@@ -166,7 +166,7 @@
 							</section>
 
 						<!-- Five -->
-
+						<!--
 							<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
@@ -510,7 +510,7 @@
 
 								</div>
 							</section>
-
+						-->
 					</div>
 
 				<!-- Footer -->
