new color + add content

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 						<li><a href="#competences">Compétences</a></li>
 						<li><a href="#projet">Mes projets</a></li>
 						<li><a href="#lecture">Mes lectures</a></li>
-						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 			</section>
@@ -50,11 +49,14 @@
 
 						<!-- about -->
 							<section id="about">
-								<span class="image fit"><img src="images/page-en-construction.png" alt="" /></span>
+								<span class="image fit"><img src="images/landscape.jpg" alt="" /></span>
 								<div class="container">
 									<header class="major">
 										<h2>About me</h2>
-										<p>Étudiant en Intelligence Artificielle à l'Université de Cergy-Pontoise</p>
+										<h3></h3>
+										<p style="Font-Weight: Bold;">Je suis actuellement étudiant en Licence 3 d'informatique à l'<a href=https://www.u-cergy.fr/en/index.html target="_blank">Université de Cergy-Pontoise</a> (UCP) où je me spécialise en machine learning et Intelligence Artificielle </p>
+										<p>Je suis également trésorier de l'association Hazybot, association de robotique de l'UCP.</p>
+										<P>Dans mon temps libre j'aime faire du judo, du jujitsu, du handball, du foot avec mes amis, des échecs, regarder des bons films et biensûr programmer et lire toute sorte d'articles ou livres scientifiques (Voir <a href="#lecture">mes lectures</a>).
 										<h3 style="text-align:center">Mon CV</h3>
 										<p style="text-align:center"><a href="./assets/CV%20moderne%20colore%207.pdf" target="_blank" class="button special icon fa-download">Français</a> <a href="./assets/CV%206%20anglais.pdf" target="_blank" class="button special icon fa-download">English</a></p>
 									</header>
@@ -68,9 +70,18 @@
 							<section id="experience">
 								<div class="container">
 									<h3>Mon expérience</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
-									<p>Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
-									<p>Aucibus sed lobortis aliquam lorem blandit.Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<center>
+									<ul style="list-style-type:none; ">
+										<li><span class="image avatar"><img src="images/dexia.png" alt="" /></span></li>
+										<li><p style="margin:-5px;">Août 2017 - Job d'été </p> <p style="margin:-5px;"> Travail administratif - maintenance informatique</p></li>
+										<li><span class="image avatar"><img src="images/startup1.png" alt="" /></span></li>
+										<li><p style="margin:-5px;">Juillet 2017 - Mission auto-entrepreneur dans une start up</p> <p style="margin:-5px;">Reconnaissance d'un jeu de dés - machine learning - traitement d'images</p></li>
+										<li><span class="image avatar"><img src="images/etis.png" alt="" /></span></li>
+										<li><p style="margin:-5px;">Juin 2017 - Stage de recherche sujet : Application de l'apprentissage automatique </p> <p style="margin:-5px;">Réseaux neurones - traitement d'images - reconnaissance manuscrite - robotique</p></li>
+										<li><span class="image avatar"><img src="images/etis.png" alt="" /></span></li>
+										<li><p style="margin:-5px;">Juin 2016 - Stage de recherche sujet: Problème de recherche de sous matrice maximum</p> <p style="margin:-5px;">Algorithmitique - Application traitment d'images</p></li>
+									</ul>
+								</center>
 								</div>
 							</section>
 
@@ -86,7 +97,7 @@
 										<li class="fa-database">Base de données SQL</br>- Client Oracle</br>- Client/Serveur Postgre</li>
 										<li class="fa-bug">Robotique</li>
 										<li class="fa-code-fork">Réseau</li>
-										<li class="fa-book">Bibliographie <3</br>(voir <a href=#>Mes lectures</a>)</li>
+										<li class="fa-book">Bibliographie <3</br>(voir <a href=#lecture>Mes lectures</a>)</li>
 										<li class="fa-laptop">Environement Linux</br>Programmation système</li>
 										<li class="fa-bolt">Travailleur</br>Toujours motivé !</li>
 										<li class="fa-users">Travail en équipe</br>Compétences managment</li>
@@ -100,27 +111,51 @@
 							<section id="projet">
 								<div class="container">
 									<h3>Mes projets</h3>
-									<p>688*397Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Projets réalisés lors de mon cursus, avec l'association Hazibot ou projets personnels</p>
 									<div class="features">
+											<!--image size : 688*397-->
+										<article>
+											<a href="#" class="image"><img src="images/facekey.png" alt="" /></a>
+											<div class="inner">
+												<h4>Face Key : gestionnaire de mots de passes par reconnaissance faciale</h4>
+												<p>[En cours]</p>
+												<ul class="icons">
+													<li><a href="https://github.com/MattVil/Face_Key" class="icon fa-github"><span class="label">Github</span></a></li>
+												</ul>
+											</div>
+										</article>
 										<article>
 											<a href="#" class="image"><img src="images/urban.png" alt="" /></a>
 											<div class="inner">
-												<h4>Urban life simulator</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4><a href="#">Urban life simulator</a></h4>
+												<p>Jeu où l'on doit s'occuper de la vie quotidienne des habitants d'une ville pour les maintenir en vie le plus longtemps possible</p>
+												<p>Un mode autonome qui utilise de l'apprentissage par renforcement (Q-Learning) pour que les habitants apprennent par eux mêmes à survivre</p>
+												<ul class="icons">
+													<li><a href="https://github.com/QuentGrd/UrbanLifeSimulator" class="icon fa-github"><span class="label">Github</span></a></li>
+												</ul>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Implementation algorithme d'itelligence Artificielle</h4>
+												<ul class="icons">
+													<li><a href="https://github.com/MattVil/Q-Learning" class="icon fa-github"><span class="label">Github</span> Q-Learning</a></li>
+													<li><a href="https://github.com/MattVil/A-star" class="icon fa-github"><span class="label">Github</span> A*</a></li>
+												</ul>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Reconnaissance manuscrite</h4>
+												<p>Programmation from scratch de réseau de neurones (simple/multi perceptron) pour la reconnaissance manuscrite. entrainement et test sur la base de données <a href="http://yann.lecun.com/exdb/mnist/">MNIST.</a></p>
+												<p>Systeme de vision temps réel pour tester les limites du perceptron</p>
+												<p>Test avec un réseau de convolution avec Tensorflow</p>
+												<ul class="icons">
+													<li><a href="https://github.com/MattVil/Number_recognition_perceptron" class="icon fa-github"><span class="label">Github</span> Perceptron simple avec IHM</a></li>
+													<li><a href="https://github.com/MattVil/MLP_from_scratch_MNIST" class="icon fa-github"><span class="label">Github</span> MLP + vision + CNN</a></li>
+												</ul>
 											</div>
 										</article>
 									</div>
@@ -131,13 +166,11 @@
 							<section id="lecture">
 								<div class="container">
 									<h3>Mes lectures</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
-									<p>Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
-									<p>Aucibus sed lobortis aliquam lorem blandit.Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>A Venir</p>
 								</div>
 							</section>
 
-						<!-- contact -->
+						<!-- contact
 							<section id="contact">
 								<div class="container">
 									<h3>Contact Me</h3>
@@ -163,7 +196,7 @@
 										</div>
 									</form>
 								</div>
-							</section>
+							</section>-->
 
 						<!-- Five -->
 						<!--
