--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Implementation algorithme d'itelligence Artificielle</h4>
+												<h4>Implementation algorithme d'intelligence Artificielle</h4>
 												<ul class="icons">
 													<li><a href="https://github.com/MattVil/Q-Learning" class="icon fa-github"><span class="label">Github</span> Q-Learning</a></li>
 													<li><a href="https://github.com/MattVil/A-star" class="icon fa-github"><span class="label">Github</span> A*</a></li>
