--- a/index.html
+++ b/index.html
@@ -112,20 +112,26 @@
 								<div class="container">
 									<h3>Mes projets</h3>
 									<p>Projets réalisés lors de mon cursus, avec l'association Hazibot ou projets personnels</p>
+									<center><a href="#" class="image"><img src="images/en-construction.png" alt="" /></a></center></br></br>
 									<div class="features">
 											<!--image size : 688*397-->
 										<article>
 											<a href="#" class="image"><img src="images/facekey.png" alt="" /></a>
 											<div class="inner">
-												<h4>Face Key : gestionnaire de mots de passes par reconnaissance faciale</h4>
+												<h4><a href="#">Face Key : gestionnaire de mots de passes par reconnaissance faciale</a></h4>
 												<p>[En cours]</p>
 												<ul class="icons">
 													<li><a href="https://github.com/MattVil/Face_Key" class="icon fa-github"><span class="label">Github</span></a></li>
 												</ul>
+												<ul class="tags">
+													<li><a href="#competences" class="tag">Base de données</a></li>
+													<li><a href="#competences" class="tag">Réseau</a></li>
+													<li><a href="#competences" class="tag">Traitement d'image</a></li>
+													<li><a href="#competences" class="tag">Machine learning</a></li>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/urban.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/urban2.png" alt="" /></a>
 											<div class="inner">
 												<h4><a href="#">Urban life simulator</a></h4>
 												<p>Jeu où l'on doit s'occuper de la vie quotidienne des habitants d'une ville pour les maintenir en vie le plus longtemps possible</p>
@@ -136,9 +142,9 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/ai.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Implementation algorithme d'intelligence Artificielle</h4>
+												<h4><a href="#">Implementation algorithme d'intelligence Artificielle</a></h4>
 												<ul class="icons">
 													<li><a href="https://github.com/MattVil/Q-Learning" class="icon fa-github"><span class="label">Github</span> Q-Learning</a></li>
 													<li><a href="https://github.com/MattVil/A-star" class="icon fa-github"><span class="label">Github</span> A*</a></li>
@@ -146,9 +152,9 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/mnist.png" alt="" /></a>
 											<div class="inner">
-												<h4>Reconnaissance manuscrite</h4>
+												<h4><a = "#">Reconnaissance manuscrite</a></h4>
 												<p>Programmation from scratch de réseau de neurones (simple/multi perceptron) pour la reconnaissance manuscrite. entrainement et test sur la base de données <a href="http://yann.lecun.com/exdb/mnist/">MNIST.</a></p>
 												<p>Systeme de vision temps réel pour tester les limites du perceptron</p>
 												<p>Test avec un réseau de convolution avec Tensorflow</p>
