--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 											</div>
 											<div class="back">
 												<h4>Juillet 2017 : Mission auto-entrepreneur dans une start up</h4>
+												<p>Sujet : Reconnaissance d'un jeu de dés</p>
 												<ul class="tags">
-													<p>Sujet : Reconnaissance d'un jeu de dés</p>
 													<li><a href="#competences" class="tag">Machine learning</a></li>
 													<li><a href="#competences" class="tag">Traitement d'images</a></li>
 													<li><a href="#competences" class="tag">Robotique</a></li>
@@ -154,9 +154,11 @@
 												<span class="image fit"><img src="images/dexia.png" alt="" /></span>
 											</div>
 											<div class="back">
-												<h4>Août 2017</h4>
-												<p>Job d'été </p>
+												<h4>Août 2017 - Job d'été</h4>
 												<p>Travail administratif - Maintenance informatique</p>
+												<ul class="tags">
+													<li><a href="#competences" class="tag">Travail en équipe</a></li>
+												</ul>
 											</div>
 										</div>
 									</div>
