--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<header class="major">
 										<h2>About me</h2>
 										<h3></h3>
-										<p style="Font-Weight: Bold;">Je suis actuellement étudiant en Licence 3 d'informatique à l'<a href=https://www.u-cergy.fr/en/index.html target="_blank">Université de Cergy-Pontoise</a> (UCP) où je me spécialise en machine learning et Intelligence Artificielle </p>
+										<p style="Font-Weight: Bold;">Je suis actuellement étudiant en Licence 3 d'informatique à l'<a class="white" href=https://www.u-cergy.fr/en/index.html target="_blank">Université de Cergy-Pontoise</a> (UCP) où je me spécialise en machine learning et Intelligence Artificielle </p>
 										<p>Je suis également trésorier de l'association Hazybot, association de robotique de l'UCP.</p>
 										<P>Dans mon temps libre j'aime faire du judo, du jujitsu, du handball, du foot avec mes amis, des échecs, regarder des bons films et biensûr programmer et lire toute sorte d'articles ou livres scientifiques (Voir <a href="#lecture">mes lectures</a>).
 										<h3 style="text-align:center">Mon CV</h3>
