--- a/v2/Cardio/index.html
+++ b/v2/Cardio/index.html
@@ -49,16 +49,16 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#"><img src="img/logo2-o.png" data-active-url="img/logo2.png" alt=""></a>
+				<a class="navbar-brand" href="#"><img src="img/logo2.png" data-active-url="img/logo2.png" alt=""></a>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right main-nav">
-					<li><a href="#intro">Home</a></li>
-					<li><a href="#services">Expériences</a></li>
-					<li><a href="#team">Compétences</a></li>
-					<li><a href="#pricing">Mes projets</a></li>
-					<li><a href="#lectures">Mes lectures</a></li>
+					<li><a href="#intro" class="bold">Home</a></li>
+					<li><a href="#services" class="bold">Expériences</a></li>
+					<li><a href="#team" class="bold">Compétences</a></li>
+					<li><a href="#pricing" class="bold">Mes projets</a></li>
+					<li><a href="#lectures" class="bold">Mes lectures</a></li>
 					<li><a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue">About me</a></li>
 				</ul>
 			</div>
@@ -86,115 +86,45 @@
 		<div class="container">
 			<div class="row intro-tables">
 				<div class="col-md-4">
-					<div class="intro-table intro-table-first">
-						<h5 class="white heading">Today's Schedule</h5>
-						<div class="owl-carousel owl-schedule bottom">
-							<div class="item">
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Early Exercise</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Muscle Building</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Cardio</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-							</div>
-							<div class="item">
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Early Exercise</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Muscle Building</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Cardio</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-							</div>
-							<div class="item">
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Early Exercise</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Muscle Building</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-								<div class="schedule-row row">
-									<div class="col-xs-6">
-										<h5 class="regular white">Cardio</h5>
-									</div>
-									<div class="col-xs-6 text-right">
-										<h5 class="white">8:30 - 10:00</h5>
-									</div>
-								</div>
-							</div>
+					<div class="intro-table intro-table-hover-1">
+						<h5 class="white heading hide-hover">2015-2018</h5>
+						<div class="bottom">
+							<h4 class="white heading small-heading no-margin regular">Université de Cergy-Pontoise</h4>
+							<!--<h4 class="white heading small-pt">20% Discount</h4>-->
+							<h5 class="white regular expand">Licence Informatique CMI SIC<h5>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-table intro-table-hover">
-						<h5 class="white heading hide-hover">Premium Membership</h5>
+						<h5 class="white heading hide-hover">1er semestre 2018/2019</h5>
 						<div class="bottom">
-							<h4 class="white heading small-heading no-margin regular">Register Today</h4>
-							<h4 class="white heading small-pt">20% Discount</h4>
-							<a href="#" class="btn btn-white-fill expand">Register</a>
+							<h4 class="white heading small-heading no-margin regular">San Francisco State University</h4>
+							<!--<h4 class="white heading small-pt">20% Discount</h4>-->
+							<a href="#" class="btn btn-white-fill expand">Mon vlog</a>
+
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-table intro-table-third">
-						<h5 class="white heading">Happy Clients</h5>
+						<h4 class="white heading content">Moocs</h4>
 						<div class="owl-testimonials bottom">
 							<div class="item">
-								<h4 class="white heading content">I couldn't be more happy with the results!</h4>
-								<h5 class="white heading light author">Adam Jordan</h5>
+								<h4 class="white heading content">Deeplearning</h4>
+								<h5 class="white heading light author">Google</h5>
 							</div>
 							<div class="item">
-								<h4 class="white heading content">I can't believe how much better I feel!</h4>
-								<h5 class="white heading light author">Greg Pardon</h5>
+								<h4 class="white heading content">Création de Start-up technologique</h4>
+								<h5 class="white heading light author">Polytechnique & HEC</h5>
 							</div>
 							<div class="item">
-								<h4 class="white heading content">Incredible transformation and I feel so healthy!</h4>
-								<h5 class="white heading light author">Christina Goldman</h5>
+								<h4 class="white heading content">Introduction to Artificial Intelligence</h4>
+								<h5 class="white heading light author">S.Thrun & P.Norvig</h5>
+							</div>
+							<div class="item">
+								<h4 class="white heading content">Learning how to learn</h4>
+								<h5 class="white heading light author">MIT</h5>
 							</div>
 						</div>
 					</div>
@@ -205,7 +135,7 @@
 	<section id="services" class="section section-padded">
 		<div class="container">
 			<div class="row text-center title">
-				<h2>Services</h2>
+				<h2>Projets</h2>
 				<h4 class="light muted">Achieve the best results with our wide variety of training options!</h4>
 			</div>
 			<div class="row services">
@@ -214,7 +144,7 @@
 						<div class="icon-holder">
 							<img src="img/icons/heart-blue.png" alt="" class="icon">
 						</div>
-						<h4 class="heading">Cardio Training</h4>
+						<h4 class="heading">Face Key</h4>
 						<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
 					</div>
 				</div>
@@ -223,7 +153,7 @@
 						<div class="icon-holder">
 							<img src="img/icons/guru-blue.png" alt="" class="icon">
 						</div>
-						<h4 class="heading">Yoga Pilates</h4>
+						<h4 class="heading">Urban Life Simulator</h4>
 						<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
 					</div>
 				</div>
@@ -232,11 +162,22 @@
 						<div class="icon-holder">
 							<img src="img/icons/weight-blue.png" alt="" class="icon">
 						</div>
-						<h4 class="heading">Power Training</h4>
+						<h4 class="heading">Reconnaissance manuscrite</h4>
 						<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
 					</div>
 				</div>
 			</div>
+			<!--<div class="row services">-->
+				<div class="col-md-4">
+					<div class="service">
+						<div class="icon-holder">
+							<img src="img/icons/heart-blue.png" alt="" class="icon">
+						</div>
+						<h4 class="heading">Algorithmes d'IA</h4>
+						<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
+					</div>
+				</div>
+			<!--</div>-->
 		</div>
 		<div class="cut cut-bottom"></div>
 	</section>
@@ -376,29 +317,16 @@
 		<div class="modal-dialog">
 			<div class="modal-content modal-popup">
 				<a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
-				<h3 class="white">Sign Up</h3>
-				<form action="" class="popup-form">
-					<input type="text" class="form-control form-white" placeholder="Full Name">
-					<input type="text" class="form-control form-white" placeholder="Email Address">
-					<div class="dropdown">
-						<button id="dLabel" class="form-control form-white dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Pricing Plan
-						</button>
-						<ul class="dropdown-menu animated fadeIn" role="menu" aria-labelledby="dLabel">
-							<li class="animated lightSpeedIn"><a href="#">1 month membership ($150)</a></li>
-							<li class="animated lightSpeedIn"><a href="#">3 month membership ($350)</a></li>
-							<li class="animated lightSpeedIn"><a href="#">1 year membership ($1000)</a></li>
-							<li class="animated lightSpeedIn"><a href="#">Free trial class</a></li>
-						</ul>
-					</div>
-					<div class="checkbox-holder text-left">
-						<div class="checkbox">
-							<input type="checkbox" value="None" id="squaredOne" name="check" />
-							<label for="squaredOne"><span>I Agree to the <strong>Terms &amp; Conditions</strong></span></label>
-						</div>
-					</div>
-					<button type="submit" class="btn btn-submit">Submit</button>
-				</form>
+				<center><span class="image avatar"><img src="img/images/avatar.png" alt="" /></span></center>
+				<h3 class="white">Matthieu Vilain</h3>
+				<h4 class="white light">Etudiant en intelligence artificielle</h4>
+				</br>
+				<p class="white">Je suis actuellement étudiant en Licence 3 d'informatique à l'<a class="link" href=https://www.u-cergy.fr/en/index.html target="_blank">Université de Cergy-Pontoise</a> (UCP) où je me spécialise en machine learning et Intelligence Artificielle <p>
+				<p class="white">Je suis également trésorier de l'association Hazybot, association de robotique de l'UCP.</p>
+				</br>
+				<h3 class="white">Mon CV</h3>
+				<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill">Français</a>
+				<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill">English</a>
 			</div>
 		</div>
 	</div>
