--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#"><img src="img/logo2.png" data-active-url="img/logo2.png" alt=""></a>
+				<a class="navbar-brand" href="#"><img src="img/logo.png" data-active-url="img/logo-active.png" alt=""></a>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right main-nav">
 					<li><a href="#intro" class="bold">Home</a></li>
-					<li><a href="#services" class="bold">Expériences</a></li>
-					<li><a href="#team" class="bold">Compétences</a></li>
-					<li><a href="#pricing" class="bold">Mes projets</a></li>
+					<li><a href="#experiences" class="bold">Expériences</a></li>
+					<li><a href="#competences" class="bold">Compétences</a></li>
+					<li><a href="#projets" class="bold">Mes projets</a></li>
 					<li><a href="#lectures" class="bold">Mes lectures</a></li>
 					<li><a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue">About me</a></li>
 				</ul>
@@ -132,11 +132,197 @@
 			</div>
 		</div>
 	</section>
-	<section id="services" class="section section-padded">
+	<section id="experiences" class="section gray-bg">
+		<div class="container">
+			<div class="row title text-center">
+				<h2 class="margin-top">Mes experiences</h2>
+				<!--<h4 class="light muted">We're a dream team!</h4>-->
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="team text-center">
+						<div class="cover" style="background:url('img/team/team-cover1.jpg'); background-size:cover;">
+							<div class="overlay text-center">
+								<h3 class="white">$69.00</h3>
+								<h5 class="light light-white">1 - 5 sessions / month</h5>
+							</div>
+						</div>
+						<img src="img/images/dexia.png" alt="Team Image" class="avatar">
+						<div class="title">
+							<h4>Dexia</h4>
+							<h5 class="muted regular">Fitness Instructor</h5>
+						</div>
+						<button data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill">Sign Up Now</button>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="team text-center">
+						<div class="cover" style="background:url('img/team/team-cover2.jpg'); background-size:cover;">
+							<div class="overlay text-center">
+								<h3 class="white">$69.00</h3>
+								<h5 class="light light-white">1 - 5 sessions / month</h5>
+							</div>
+						</div>
+						<img src="img/images/startup1.png" alt="Team Image" class="avatar">
+						<div class="title">
+							<h4>Start-up</h4>
+							<h5 class="muted regular">Personal Trainer</h5>
+						</div>
+						<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="team text-center">
+						<div class="cover" style="background:url('img/team/team-cover3.jpg'); background-size:cover;">
+							<div class="overlay text-center">
+								<h3 class="white">$69.00</h3>
+								<h5 class="light light-white">1 - 5 sessions / month</h5>
+							</div>
+						</div>
+						<img src="img/images/etis.png" alt="Team Image" class="avatar">
+						<div class="title">
+							<h4>Laboratoire ETIS</h4>
+							<h5 class="muted regular">Personal Trainer</h5>
+						</div>
+						<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="competences" class="section">
+		<div class="container img-back">
+			<div class="row title text-center">
+				<h2 class="margin-top white">Mes compétences</h2>
+				<h4 class="light white">Je tire mes compétences des cours que j'ai reçu à l'UCP, des cours en ligne mais également de mes projets en groupe et personnel (projet informatique ou non)</h4>
+				</br></br>
+			</div>
+			<div class="col-sm-6 text-center-mobile text-align">
+				<!--code-->
+				<p>
+					<i class="icon_desktop white"></i>
+					<span class="small-marge white">Développement :</span>
+				</p>
+				<ul>
+					<li class=" white light">C, Java, Python</li>
+					<li class=" white light">HTML, CSS, PHP</li>
+				</ul>
+				</br>
+				<!--machine learning-->
+				<p>
+					<i class="icon_heart white"></i>
+					<span class="small-marge white">Machine learning</span>
+				</p>
+				<ul>
+					<li class=" white light">Tensorflow</li>
+					<li class=" white light">Perceptron/réseau convolution</li>
+					<li class=" white light">Apprentissage par renforcement</li>
+				</ul>
+				</br>
+				<!--Robotique-->
+				<p>
+					<i class="icon_cogs white"></i>
+					<span class="small-marge white">Robotiqe</span>
+				</p>
+				<ul>
+					<li class=" white light">Arduino/Raspberry</li>
+					<li class=" white light">Communication série</li>
+					<li class=" white light">Asservissement</li>
+					<li class=" white light">Traitement d'images</li>
+				</ul>
+				</br>
+				<!--bibliographie-->
+				<p>
+					<i class="icon_book white"></i>
+					<span class="small-marge white">Bibliographie</span>
+				</p>
+				<ul>
+					<li class=" white light">Voir <a href="#lectures">mes lectures</a></li>
+				</ul>
+				</br>
+				<!--langues-->
+				<p>
+					<i class="icon_chat white"></i>
+					<span class="small-marge white">Langues</span>
+				</p>
+				<ul>
+					<li class=" white light">Anglais courant</li>
+					<li class=" white light">Allemand niveau B2</li>
+				</ul>
+				</br>
+				<!--equipe-->
+				<p>
+					<i class="social_myspace white"></i>
+					<span class="small-marge white">Travail en équipe</span>
+				</p>
+				<ul>
+					<li class=" white light">Compétences de managment</li>
+					<li class=" white light">Compétences de gestion de projet</li>
+				</ul>
+				</br>
+			</div>
+
+			<div class="col-sm-6 text-center-mobile">
+				<!--Tools-->
+				<p>
+					<i class="icon_tools white"></i>
+					<span class="small-marge white">Tools & library :</span>
+				</p>
+				<ul>
+					<li class=" white light">OpenCV</li>
+					<li class=" white light">Git</li>
+				</ul>
+				</br>
+				<!--Base de donnée-->
+				<p>
+					<i class="icon_drive_alt white"></i>
+					<span class="small-marge white">Base de données :</span>
+				</p>
+				<ul>
+					<li class=" white light">Client Oracle</li>
+					<li class=" white light">Client/Serveur Postgre</li>
+				</ul>
+				</br>
+				<!--Réseau-->
+				<p>
+					<i class="icon_flowchart_alt white"></i>
+					<span class="small-marge white">Réseau :</span>
+				</p>
+				<ul>
+					<li class=" white light">Conception réseau</li>
+					<li class=" white light">DNS, Firewall, proxy ...</li>
+				</ul>
+				</br>
+				<!--environnement-->
+				<p>
+					<i class="icon_document white"></i>
+					<span class="small-marge white">Environnement linux :</span>
+				</p>
+				<ul>
+					<li class=" white light">Programmation systeme</li>
+					<li class=" white light">Fonctionnement OS</li>
+				</ul>
+				</br>
+				<!--atouts-->
+				<p>
+					<i class="icon_lightbulb white"></i>
+					<span class="small-marge white">Atouts</span>
+				</p>
+				<ul>
+					<li class=" white light">Travailleur</li>
+					<li class=" white light">Toujours motivé</li>
+					<li class=" white light">Sociable</li>
+					<li class=" white light">Bonne humeur</li>
+				</ul>
+				</br>
+			</div>
+		</div>
+	</section>
+	<section id="projets" class="section section-padded">
 		<div class="container">
 			<div class="row text-center title">
-				<h2>Projets</h2>
-				<h4 class="light muted">Achieve the best results with our wide variety of training options!</h4>
+				<h2>Mes projets [En construction]</h2>
+				<h4 class="light muted">Projets réalisés lors de mon cursus, avec l'association Hazibot ou projets personnels</h4>
 			</div>
 			<div class="row services">
 				<div class="col-md-4">
@@ -181,132 +367,24 @@
 		</div>
 		<div class="cut cut-bottom"></div>
 	</section>
-	<section id="team" class="section gray-bg">
+
+	<section id="lectures" class="section section-padded blue-bg">
 		<div class="container">
-			<div class="row title text-center">
-				<h2 class="margin-top">Team</h2>
-				<h4 class="light muted">We're a dream team!</h4>
+			<div class="title text-center">
+				<h3 class="white">Mes lectures</h3>
+				<h4 class="white light">Mes lectures du moment, archive de mes lecture <a href="#">ici</a></h4>
 			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="team text-center">
-						<div class="cover" style="background:url('img/team/team-cover1.jpg'); background-size:cover;">
-							<div class="overlay text-center">
-								<h3 class="white">$69.00</h3>
-								<h5 class="light light-white">1 - 5 sessions / month</h5>
-							</div>
-						</div>
-						<img src="img/team/team3.jpg" alt="Team Image" class="avatar">
-						<div class="title">
-							<h4>Ben Adamson</h4>
-							<h5 class="muted regular">Fitness Instructor</h5>
-						</div>
-						<button data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill">Sign Up Now</button>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="team text-center">
-						<div class="cover" style="background:url('img/team/team-cover2.jpg'); background-size:cover;">
-							<div class="overlay text-center">
-								<h3 class="white">$69.00</h3>
-								<h5 class="light light-white">1 - 5 sessions / month</h5>
-							</div>
-						</div>
-						<img src="img/team/team1.jpg" alt="Team Image" class="avatar">
-						<div class="title">
-							<h4>Eva Williams</h4>
-							<h5 class="muted regular">Personal Trainer</h5>
-						</div>
-						<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="team text-center">
-						<div class="cover" style="background:url('img/team/team-cover3.jpg'); background-size:cover;">
-							<div class="overlay text-center">
-								<h3 class="white">$69.00</h3>
-								<h5 class="light light-white">1 - 5 sessions / month</h5>
-							</div>
-						</div>
-						<img src="img/team/team2.jpg" alt="Team Image" class="avatar">
-						<div class="title">
-							<h4>John Phillips</h4>
-							<h5 class="muted regular">Personal Trainer</h5>
-						</div>
-						<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section id="pricing" class="section">
-		<div class="container">
-			<div class="row title text-center">
-				<h2 class="margin-top white">Pricing</h2>
-				<h4 class="light white">Choose your favorite pricing plan and sign up today!</h4>
-			</div>
-			<div class="row no-margin">
-				<div class="col-md-7 no-padding col-md-offset-5 pricings text-center">
-					<div class="pricing">
-						<div class="box-main active" data-img="img/pricing1.jpg">
-							<h4 class="white">Yoga Pilates</h4>
-							<h4 class="white regular light">$850.00 <span class="small-font">/ year</span></h4>
-							<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill">Sign Up Now</a>
-							<i class="info-icon icon_question"></i>
-						</div>
-						<div class="box-second active">
-							<ul class="white-list text-left">
-								<li>One Personal Trainer</li>
-								<li>Big gym space for training</li>
-								<li>Free tools &amp; props</li>
-								<li>Free locker</li>
-								<li>Free before / after shower</li>
-							</ul>
-						</div>
-					</div>
-					<div class="pricing">
-						<div class="box-main" data-img="img/pricing2.jpg">
-							<h4 class="white">Cardio Training</h4>
-							<h4 class="white regular light">$100.00 <span class="small-font">/ year</span></h4>
-							<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill">Sign Up Now</a>
-							<i class="info-icon icon_question"></i>
-						</div>
-						<div class="box-second">
-							<ul class="white-list text-left">
-								<li>One Personal Trainer</li>
-								<li>Big gym space for training</li>
-								<li>Free tools &amp; props</li>
-								<li>Free locker</li>
-								<li>Free before / after shower</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section id="lectures" class="section section-padded">
-		<h1>c'est cool</h1>
-	</section>
-	<section class="section section-padded blue-bg">
-		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="owl-twitter owl-carousel">
 						<div class="item text-center">
-							<i class="icon fa fa-twitter"></i>
-							<h4 class="white light">To enjoy the glow of good health, you must exercise.</h4>
-							<h4 class="light-white light">#health #training #exercise</h4>
+							<h4 class="light-white light">"Deepface" Facebook</h4>
 						</div>
 						<div class="item text-center">
-							<i class="icon fa fa-twitter"></i>
-							<h4 class="white light">To enjoy the glow of good health, you must exercise.</h4>
-							<h4 class="light-white light">#health #training #exercise</h4>
+							<h4 class="light-white light">"Deeplearning" Ian Goodfellow</h4>
 						</div>
 						<div class="item text-center">
-							<i class="icon fa fa-twitter"></i>
-							<h4 class="white light">To enjoy the glow of good health, you must exercise.</h4>
-							<h4 class="light-white light">#health #training #exercise</h4>
+							<h4 class="light-white light">"Initiation à la théorie des graphes" Christian Roux</h4>
 						</div>
 					</div>
 				</div>
@@ -339,7 +417,7 @@
 					<a href="#" class="btn btn-blue ripple trial-button">Start Free Trial</a>
 				</div>
 				<div class="col-sm-6 text-center-mobile">
-					<h3 class="white">Opening Hours <span class="open-blink"></span></h3>
+					<h3 class="white">Currently thinking<span class="open-blink"></span></h3>
 					<div class="row opening-hours">
 						<div class="col-sm-6 text-center-mobile">
 							<h5 class="light-white light">Mon - Fri</h5>
