--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
-					<h1 id="logo"><a href="./v2/Cardio/v2.html">Matthieu Vilain</a></h1>
+					<h1 id="logo"><a href="./v2/index.html">Matthieu Vilain</a></h1>
 					<p>Étudiant en Intelligence Artificielle</br>Université de Cergy-Pontoise</p>
 				</header>
 				<footer>
